src/FinancialForce Accounting/objects/codaDimension4__c.object
<CustomObject>
    <customHelpPage>codahelpdimension</customHelpPage>
    <description>Used to sub-analyze postings and can be used to represent a number of different business concepts.</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReportingCode__c</fullName>
        <description>An alternative name or code intended for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dimension 4</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension 4</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>